manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-piolt-deployment
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: eks-piolt
